crates/ori-style/style/default/button.css
button {
	background: var(--primary);
	border-radius: 5px;

	padding: 6px;

	justify-content: center;
	align-content: center;

	font-size: 1.5em;
	color: #444444;
	text-align: center;
	text-valign: center;
}

button:hover {
	background: var(--primary-hover) 0.03s;
}

button:active {
	background: var(--primary-active) 0.03s;
}

